-Rotate tile rendering to match data in tooltip. -Optimize tile loading. -Loads of fixes. -Remove old code.